src/stylesheets/vortex/page-game.scss
.game-page {
  padding-right: $half-gutter;
}

.game-filter-input {
  padding: 10px 0;
  margin-bottom: 5px !important;
  position: relative;
  border-color: $border-color;
  width: 20em;
  // prevent this from overlaying popovers from the iconbar above
  z-index: 0;
  .form-control {
    position: initial;
    float: unset;
    z-index: unset;
  }
}

#games-picker-tabs {
  .tab-content {
    // needs to be relative for the placeholder to show properly if a tab is empty
    position: relative;
  }
}

.popover-game-info {
  max-width: 800px;
  .popover-content {
    display: flex;
    > * {
      padding: 0 $half-gutter;
    }
    .btn-group-vertical {
      justify-content: space-around;
      border-right: 1px solid $border-color;
      button {
        margin: 4px 0;
      }
    }
  }
}

.game-info-grid {
  display: grid;
  grid-template-columns: 40% 60%;
  grid-row-gap: 4px;
  width: 100%;
}

.game-info-value {
  word-wrap: break-word;
  overflow-x: auto;
}

.discovery-footer {
  padding: 16px;
  .discovery-footer-label {
    margin-bottom: 8px;
    font-size: smaller;
  }
}

.game-list-item { 
  .btn-embed {
    margin: 0 4px;
  }
}

